# nerve

./: .gitignore  README.md  bot.js  package-lock.json  package.json  pyproject.toml  venom_bot.js  version.txt
.wwebjs_auth/session/: DevToolsActivePort  Last Browser  Local State
.wwebjs_auth/session/Default/: DIPS-wal  Favicons  History  History-journal  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  Top Sites  Web Data  passkey_enclave_state
.wwebjs_auth/session/Default/DawnGraphiteCache/: data_1  index
.wwebjs_auth/session/Default/DawnWebGPUCache/: data_1  index
.wwebjs_auth/session/Default/Extension Rules/: LOG
.wwebjs_auth/session/Default/Extension Scripts/: LOG
.wwebjs_auth/session/Default/Extension State/: LOG  LOG.old
.wwebjs_auth/session/Default/GCM Store/: LOG  LOG.old
.wwebjs_auth/session/Default/GPUCache/: data_0  data_1  data_2  index
.wwebjs_auth/session/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
.wwebjs_auth/session/Default/Session Storage/: LOG  LOG.old
.wwebjs_auth/session/Default/Sessions/: Session_13421799663243502  (+2 more)
.wwebjs_auth/session/segmentation_platform/: ukm_db
.wwebjs_cache/: 2.3000.1038191839.html  2.3000.1038220568.html  2.3000.1038315774.html  2.3000.1038399473.html
src/nerve/: __init__.py  config.py  crew.py  main.py  tool_notifier.py  whatsapp_bot.py
src/nerve/config/: __init__.py  agents.yaml  tasks.yaml
src/nerve/tools/: __init__.py  crawler_tools.py  exploit_tools.py  patch_tools.py  recon_tools.py  scanner_tools.py  severity_tools.py
(+58 files in other folders)
