[project]
name = "nerve"
version = "0.1.0"
description = "nerve using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.14.1",
    "fastapi>=0.115,<1",
    "websockets>=14.0",
    "playwright>=1.58.0",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
nerve = "nerve.main:run"
run_crew = "nerve.main:run"
train = "nerve.main:train"
replay = "nerve.main:replay"
test = "nerve.main:test"
run_with_trigger = "nerve.main:run_with_trigger"
whatsapp_bot = "nerve.main:run_whatsapp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
